--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,37 +25,28 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "16"
       # https://github.com/actions/cache/blob/master/examples.md#node---yarn
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: actions/cache@v2
         id: yarn-cache
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          path: ./.yarn/cache
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Ensure linted
-        run: yarn run ensure-linted
-      - name: Test
-        run: yarn test
-      - name: Build
-        run: yarn build
+        run: yarn install --immutable
+      # - name: Ensure linted
+      #   run: yarn run ensure-linted
+      # - name: Test
+      #   run: yarn test
+      # - name: Build
+      #   run: yarn build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          if [ -z "$GITHUB_TOKEN" ]; then
-            echo 'Unexpected empty GITHUB_TOKEN' >&2
-            exit 1
-          fi
-          if [ -z "$NPM_TOKEN" ]; then
-            echo 'Please set secrets.NPM_TOKEN' >&2
-            exit 1
-          fi
           yarn run semantic-release
