--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tlibjs/package-template.git"
+    "url": "https://github.com/EqualMa/w2m-docker.git"
   },
   "scripts": {
     "test": "jest",
