--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,8 @@ jobs:
       #   run: yarn test
       # - name: Build
       #   run: yarn build
+      - name: Build Image
+        run: docker build . -t equalma/w2m
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
